cloud-infra-macros/tests/fails/log_retention_invalid_string.rs
use cloud_infra_macros::log_retention;

fn example() {
    let retention = log_retention!("not_a_number");
}

fn main() {}